[project]
name = "fastapi-sqlalchemy-example"
version = "0.1.0"
description = "FastAPI todos API with SQLAlchemy and Alembic migrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "pydantic>=2.8.0",
    "pymysql>=1.1.0",
]
